[package]
name = "zing-cmd"
version = "0.1.0"
authors = ["Aske Simon Christensen <askesc@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
hound = "3.4.0"
notify = "4.0.15"
rodio = "0.11.0"

bytecode = { path = "../bytecode" }
zing = { path = "../zing" }

[build-dependencies]
nasm-rs = "= 0.1.3"
