[package]
name = "zing"
version = "0.1.0"
authors = ["Aske Simon Christensen <askesc@gmail.com>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
lalrpop-util = "0.18.1"
regex = "0.2.0"

bytecode = { path = "../bytecode" }

[build-dependencies.lalrpop]
version = "0.18.1"
features = ["lexer"]

[lib]
name = "zing"
crate-type = ["rlib"]
