[package]
name = "zing"
version = "0.1.0"
authors = ["Aske Simon Christensen <askesc@gmail.com>"]
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

[dependencies]
regex = "1.5.4"

program = { path = "../program" }

[dependencies.lalrpop-util]
version = "0.19.6"
features = ["lexer"]

[build-dependencies.lalrpop]
version = "0.19.6"
features = ["lexer"]

[lib]
name = "zing"
crate-type = ["rlib"]
