[package]
name = "zing-cmd"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
hound = "3.4.0"
notify = "4.0.15"
rodio = "0.20.1"

ir = { path = "../ir" }
zing = { path = "../zing" }

[build-dependencies]
nasm-rs = "= 0.1.3"
