[package]
name = "zing-cmd"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.11"
clap = { version = "4.5.60", features = ["derive"] }
hound = "3.4.0"
notify = "4.0.15"
rodio = "0.20.1"
bincode = "1.3"

convert = { path = "../convert" }
ir = { path = "../ir" }
runtime = { path = "../runtime" }
zing = { path = "../zing" }
