[package]
name = "zing-vst"
version = "0.1.0"
authors = ["Aske Simon Christensen <askesc@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
notify = "4.0.15"
rfd = "0.6.3"
simple-message-box = "0.0.2"
vst = "0.2.0"

ir = { path = "../ir" }
zing = { path = "../zing" }

[build-dependencies]
nasm-rs = "= 0.1.3"

[lib]
crate-type = ["cdylib"]
