[package]
name = "zing-vst"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
notify = "4.0.15"
rfd = "0.16.0"
simple-message-box = "0.0.2"
vst = "0.3.0"

ir = { path = "../ir" }
zing = { path = "../zing" }

[build-dependencies]
nasm-rs = "= 0.1.3"

[lib]
crate-type = ["cdylib"]
