[package]
name = "zing-vst"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
notify = "4.0.15"
rfd = "0.16.0"
simple-message-box = "0.0.2"
vst = "0.3.0"

ir = { path = "../ir" }
runtime = { path = "../runtime" }
zing = { path = "../zing" }

[lib]
crate-type = ["cdylib"]
