[package]
name = "zing"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs" # LALRPOP preprocessing

[dependencies]
regex = "1.12.2"

ir = { path = "../ir" }

[dependencies.lalrpop-util]
version = "0.22.2"
features = ["lexer"]

[build-dependencies.lalrpop]
version = "0.22.2"
features = ["lexer"]

[lib]
name = "zing"
crate-type = ["rlib"]
